<resources>
    <string name="hello">Hello World, MainActivity!</string>
    <string name="app_name">ZoweeMES_V8</string>
    <string name="first_tab">first</string>
    <string name="second_tab">second</string>
    <string name="third_tab">third</string>
    <string name="fourth_tab">fourth</string>
    <string name="fifth_tab">fifth</string>
    <string name="first_tab_txt">入库扫描</string>
    <string name="second_tab_txt">FIFO查询</string>
    <string name="third_tab_txt">拆分出库</string>
    <string name="fourth_tab_txt">数量调整</string>
    <string name="fiftg_tab_txt">批号查询</string>
    <string name="recieve_good_oodnum">收货单号</string>
    <string name="storage_locaction">库位</string>
    <string name="scan_outbox_packNum">扫描外箱或小包号</string>
    <string name="system_details">系统信息</string>
    <string name="scan_smalpac_barcode">请扫描小包条码</string>
    <string name="oldpack_details_clue">以下是比该条码更早生产的小包</string>
    <string name="split_batnum">拆分批号</string>
    <string name="slit_amount">拆分数量</string>
    <string name="target_batnum">目标批号</string>
    <string name="batnum">批号</string>
    <string name="adjust_amount">调整数量</string>
    <string name="plus">加</string>
    <string name="reduce">减</string>
    <string name="material_rewind">物料收料</string>
    <string name="order_num">采购单号</string>
    <string name="recie_good_num">收货单号</string>
    <string name="material_barcoade">物料条码</string>
    <string name="text_SMTFirstScan">上线扫描</string>
    <string name="text_SMTScanMaterial">SMT上料</string>
    <string name="text_SMTLade">SMT装车</string>
    <string name="text_SMTStick">SMT贴片</string>
    <string name="text_SMTStorage">SMT入库</string>
    <string name="pro_reciegood_num">产生收货单号</string>
    <string name="submit">提交</string>
    <string name="prepare_operate">备料操作</string>
    <string name="work_order">工单</string>
    <string name="material_inventory">物料盘点</string>
    <string name="meterial_batnum">物料批号</string>
    <string name="meterial_amount">物料数量</string>
    <string name="scan_batnum">扫描批号</string>
    <string name="feeding_onmaterial">上料对料</string>
    <string name="refresh">刷新</string>
    <string name="product_line">产线</string>
    <string name="machine">机台</string>
    <string name="empty">清空</string>
    <string name="operate_scan">请扫描</string>
    <string name="chemater_statab">查料站表</string>
    <string name="meter_statab">料站表</string>
    <string name="meter_statab_def">产线或机台为空</string>
    <string name="remove_materi">卸换料卷</string>
    <string name="remove_materi_clue">请扫描槽位条码以卸下挂在上面的料卷</string>
    <string name="finished_warehouse">成品入仓</string>
    <string name="finished_warehouse_card">卡板入仓</string>
    <string name="finished_warehouse_catton">卡通入仓</string>
    <string name="finished_warehouse_num">完工入库单号</string>
    <string name="workorder_name">工单名称</string>
    <string name="order_name">订单名称</string>
    <string name="catton_num">卡通箱号</string>
    <string name="finished_out">成品仓扫描出库</string>
    <string name="finished_out_card">卡板出库</string>
    <string name="finished_out_catton">卡通出库</string>
    <string name="shipment_num">出货单号</string>
    <string name="custom_name">客户名称</string>
    <string name="custom_fullname">客户全称</string>
    <string name="outstore_date">出库日期</string>
    <string name="finish_delivery_card">卡板发货</string>
    <string name="finish_delivery_catton">卡通发货</string>
    <string name="shipment_date">出货时间</string>
    <string name="pier">码头</string>
    <string name="card_num">卡板号</string>
    <string name="shipment">出货</string>
    <string name="laser_serial_initfail">激光扫描启动出错!检查是否开启其他激光扫描程序或扫描参数配置错误!</string>
    <string name="laser_not_finish">激光串口初始化尚未完成!</string>
    <string name="user_initLaserPara_error">激光使用者值不得为空</string>
    <string name="laserLis_notNull">激光扫描设置监听器的值不得为空!</string>
    <string name="serialInit_fail">串口初始化失败!</string>
    <string name="scan">扫描</string>
    <string name="ensure">确定</string>
    <string name="cancel">清除</string>
    <string name="fifoRes">扫描结果: </string>
    <string name="fifoScanLotSnError">条码有误,请检查!</string>
    <string name="boxSn">外箱号</string>
    <string name="lotSn">物料批号</string>
    <string name="stockLocation">库位 </string>
    <string name="GRNNO_NOTNULL">收货单号不得为空! </string>
    <string name="StocPosition_NOTNULL">库位 不得为空！</string>
    <string name="SmallBall_NOTNULL">请扫描小包条码!</string>
    <string name="MetrialQtyNoLowZero">调整的数量必须大于0!</string>
    <string name="NetConFail">网络繁忙或连接失败!请检查网络!</string>
    <string name="repeatScan">重复扫描</string>
    <string name="taskProDia">任务进度框</string>
    <string name="loadDataFromServer">正在从服务器读取数据！请稍候...</string>
    <string name="loadDataForUI">正在加载界面数据...</string>
    <string name="TransationData">数据提交中 请稍后...</string>
    <string name="loadAppNecessData">正在获取程序所需的数据...</string>
    <string name="scanLotSN">请扫描物料批号！</string>
    <string name="scanStaSN">请扫描站位条码！</string>
    <string name="ERROR_LOTSN">扫描的条码非法！</string>
    <string name="removeMateriSucc">卸换料卷成功！</string>
    <string name="removeMateriFail">卸换料卷失败！</string>
    <string name="feedOnMateriFail">上料对料失败！</string>
    <string name="feedOnMateriSucces">上料对料成功！</string>
    <string name="finishWarehouseCat_succ">卡通箱入仓成功！</string>
    <string name="finishWarehouseCat_fail">卡通箱入仓失败！</string>
    <string name="finishWarehouseCard_succ">卡板入仓成功！</string>
    <string name="finishWarehouseCard_fail">卡板入仓失败！</string>
    <string name="storeSplit_success">拆分出库成功！</string>
    <string name="splitlot_notnull">拆分批号不得为空！</string>
    <string name="splitamount_notnull">拆分数量不得为空！</string>
    <string name="storeSplit_fail">拆分出库失败！</string>
    <string name="targetlot_notnull">目标批号不得为空！</string>
    <string name="exceed_maxSplitAmount">输入的拆分数量超过现有拆分批号的数量！现有拆分批号的数量为: </string>
    <string name="splitAmount_notLowZero">拆分值必须大于0！</string>
    <string name="inputData_notLegal">输入的数据不合法！</string>
    <string name="scan_splitLot">请扫描拆分批号！</string>
    <string name="scan_targetLot">请扫描目标批号！</string>
    <string name="adjustLot_notNull">批号不得为空！</string>
    <string name="adjustNum_notNull">调整的数量不得为空！</string>
    <string name="quantityAdjust_suc">数量调整成功！</string>
    <string name="quantityAdjust_fail">数量调整失败！</string>
    <string name="adjust_scanLotSN">请扫描批号！</string>
    <string name="batNumScan_success">批号查询成功！</string>
    <string name="batNumScan_fail">批号查询失败！</string>
    <string name="prepareSuccess">备料操作成功！</string>
    <string name="prepareFail">备料操作失败！</string>
    <string name="lotSN_notNull">物料批号不得为空！</string>
    <string name="moName_notNull">工单号不得为空！</string>
    <string name="materCheck_succ">物料检测成功！</string>
    <string name="materCheck_fail">物料检测失败！</string>
    <string name="materInven_succ">物料盘点成功！</string>
    <string name="materInven_fail">物料盘点失败！</string>
    <string name="inputData_notNull">输入数据不得为空！</string>
    <string name="inputData_Error">输入的数据非法！</string>
    <string name="matInv_dataDisaccord">物料批号 重复扫描 输入数据不一致！</string>
    <string name="please_scan">请扫描!</string>
    <string name="error_staLot">站位条码非法!</string>
    <string name="stationNo_notLegal">机台的长度只能为1!</string>
    <string name="lineNo_notLegal">产线的长度只能为3!</string>
    <string name="CheMatStaTabRes">在产线:docNo 机台:staNo  共查询出:{}条数据!</string>
    <string name="finWareHourse_initError1">请选择工单或重新运行卡通箱号扫描！</string>
    <string name="finWareHourse_initError2">请选择完工入库单号或选择工单名称重新加载入库单号!</string>
    <string name="finishOutCartoon_succ">卡通箱出库成功!</string>
    <string name="finishOutCartoon_fail">卡通箱出库失败!</string>
    <string name="finishDeliCartton_succ">卡通箱发货成功!</string>
    <string name="finishDeliCartton_fail">卡通箱发货失败!</string>
    <string name="FinishOutCard_succ">卡板出库成功!</string>
    <string name="FinishOutCard_fail">卡板出库失败!</string>
    <string name="finishDeliCard_succ">卡板发货成功!</string>
    <string name="finishDeliCard_fail">卡板发货失败!</string>
    <string name="dnname_isnull">请选择出货单号!</string>
    <string name="ordername_isnull">请选择订单名称或重新运行扫描!</string>
    <string name="inputDate_error">输入的日期非法 格式应如 2000-12-31</string>
    <string name="cartoonbox_notnull">卡通箱号不得为空!</string>
    <string name="datetime_isnull">输入的日期不得为空!</string>
    <string name="pier_isnull">码头不得为空!</string>
    <string name="cardSN_notnull">卡板号不得为空!</string>
    <string name="ws_config">WebService配置</string>
    <string name="WSSpaceName">WS命名空间</string>
    <string name="WSDL">WSDL</string>
    <string name="WSMethod">调用方法</string>
    <string name="WSEditon">WS版本</string>
    <string name="ISDOTNET">支持DotNet</string>
    <string name="USERTICKET">用户通行证</string>
    <string name="SQLString">SQLString</string>
    <string name="laserScan_config">扫描配置</string>
    <string name="reConfig">默认出厂配置</string>
    <string name="support">支持</string>
    <string name="unsupport">不支持</string>
    <string name="sqlSentence">SQL参数名</string>
    <string name="serialName">串口名</string>
    <string name="owner">串口使用者</string>
    <string name="baurate">波特率</string>
    <string name="timeout">超时设置</string>
    <string name="datasbit">数据位</string>
    <string name="endbit">结束位</string>
    <string name="prioritybit">奇偶验证位</string>
    <string name="flowControl">流控制</string>
    <string name="modify">修改</string>
    <string name="wsconfig_success">WebService配置成功!</string>
    <string name="laserConfig_Success">激光扫描配置成功!最好重启android系统！</string>
    <string name="configuring_laser">正在配置激光扫描  请稍后...</string>
    <string name="wsSpaceName_isnull">WS命名空间不得为空!</string>
    <string name="wsWsdl_isnull">WSDL不得为空!</string>
    <string name="wsEdition_isnull">WS版本不得为空!</string>
    <string name="wsMethod_isnull">ws方法不得为空!</string>
    <string name="serialName_isnull">串口名不得为空!</string>
    <string name="owner_isnull">串口使用者不得为空！</string>
    <string name="baurate_isnull">波特率不得为空！</string>
    <string name="timeout_isnull">超时设置不得为空!</string>
    <string name="databits_isnull">数据位不得为空！</string>
    <string name="endbits_isnull">结束位不得为空！</string>
    <string name="priority_isnull">奇偶验证位不得为空！</string>
    <string name="flowControl_isnull">流控制不得为空！</string>
    <string name="abolish">取消</string>
    <string name="download_fail">网络连接失败或文件不存在或存储空间已满！</string>
    <string name="download_finish">更新文件下载完成！</string>
    <string name="update_cancel">更新取消！</string>
    <string name="schedule">进度：</string>
    <string name="apk_notExist">更新文件不存在！</string>
    <string name="mesupdate">软件更新</string>
    <string name="mesupdate_fail">更新失败!网络连接失败或更新源有误!</string>
    <string name="latest_version">最新版本 无需更新！</string>
    <string name="updateSourceDate_error">更新源返回的数据有误！</string>
    <string name="checkingupdate">正在检查软件更新!请等待...</string>
    <string name="update">更新</string>
    <string name="mes_setting">软件配置</string>
    <string name="mes_exit">退出</string>
    <string name="mesupdate_setting">软件更新配置</string>
    <string name="restore">还原配置</string>
    <string name="updateSource">更新源</string>
    <string name="mesupdate_setting_success">软件更新配置成功!</string>
    <string name="mesupdate_setting_restore">软件更新配置恢复成功！</string>
    <string name="updateSource_isnull">更新源地址不得为空!</string>
    <string name="updateSource_error">更新源地址非法!</string>
    <string name="wsconfig_restore">WS配置恢复成功！</string>
    <string name="laserConfig_restore">激光扫描配置恢复成功！</string>
    <string name="laser_Config">激光头配置</string>
    <string name="smtstick_setting">设备资源名称及贴片扫描设置</string>
    <string name="laser">激光头</string>
    <string name="laser_on">开启</string>
    <string name="laser_off">关闭</string>
    <string name="laserFunc_configSucc">激光头配置成功！</string>
    <string name="ws_req_fail">webservice 请求失败！</string>
    <string name="refreshData">刷新</string>
    <string name="storageScan_suc">入库扫描成功!</string>
    <string name="storageScan_fail">入库扫描失败!</string>
    <string name="station_lotSN">站位条码</string>
    <string name="manulRef_input">手动刷新数据</string>
    <string name="check_str">查询关键字</string>
    <string name="checked_list">被查列表</string>
    <string name="check">查询</string>
    <string name="finish">完成</string>
</resources>