<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/thin_back"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="12dp" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <TextView
            style="@style/check_monames_style1"
            android:layout_height="wrap_content"
            android:text="@string/check_str" />

        <EditText
            android:id="@+id/edt_checkStr"
            style="@style/check_monames_style2"
            android:layout_height="wrap_content"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <TextView
            style="@style/check_monames_style1"
            android:layout_height="wrap_content"
            android:text="@string/checked_list" />

        <Spinner
            android:id="@+id/spin_checkedlist"
            style="@style/check_monames_style2"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_Check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check" />

        <Button
            android:id="@+id/btn_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/finish" />

        <Button
            android:id="@+id/btn_abolish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/abolish" />
    </LinearLayout>

</LinearLayout>