<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    		  android:layout_width="wrap_content" android:layout_height="wrap_content"
    		  android:orientation="vertical" android:padding="15dp" 
    		  android:background="@color/thin_back">
    <TextView  android:layout_width="wrap_content"  android:layout_height="wrap_content"
               android:layout_gravity="center"	android:text="@string/manulRef_input"  
               android:textSize="16dp"/>
    <LinearLayout   android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:orientation="horizontal"  android:layout_marginTop="8dp">
        <TextView  android:layout_width="wrap_content"  android:layout_height="wrap_content"
                   android:text="@string/station_lotSN"  android:textSize="14dp"/>
        <EditText  android:layout_width="180dp"  android:layout_height="wrap_content"
                   android:layout_marginLeft="10dp"	 android:singleLine="true"
                   android:textSize="12dp" android:id="@+id/dig_edtStaLotSN"/>
    </LinearLayout>
    <LinearLayout   android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:orientation="horizontal"  android:layout_marginTop="3dp"
                    android:id="@+id/layout_mater_batnum">
        <TextView  android:layout_width="wrap_content"  android:layout_height="wrap_content"
                   android:text="@string/meterial_batnum"  android:textSize="14dp"/>
        <EditText  android:layout_width="180dp"  android:layout_height="wrap_content"
                   android:layout_marginLeft="10dp"  android:textSize="12dp"
                   android:singleLine="true"  android:id="@+id/dig_edtMater_Batnum"/>
    </LinearLayout>
	<LinearLayout   android:layout_width="fill_parent" android:layout_height="wrap_content"
                    android:orientation="horizontal"  android:gravity="center"
                    android:layout_marginTop="5dp">
        <Button    android:layout_width="wrap_content"  android:layout_height="wrap_content"
                   android:text="@string/ensure"  android:textSize="14dp"    
                   android:id="@+id/dialog_btnEnsure"/>
        <Button   android:layout_width="wrap_content"  android:layout_height="wrap_content"
                  android:layout_marginLeft="10dp"  android:textSize="14dp"
                   android:text="@string/abolish"  android:id="@+id/dialog_btnCancel"/>
    </LinearLayout>
    
</LinearLayout>