<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RadioGroup
        android:id="@+id/radioGroup_tb2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/btn_first_tab"
            style="@style/main_btn_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feeding_onmaterial" />

        <RadioButton
            android:id="@id/btn_second_tab"
            style="@style/main_btn_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chemater_statab" />

        <RadioButton
            android:id="@id/btn_third_tab"
            style="@style/main_btn_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove_materi" />
    </RadioGroup>

    <include layout="@layout/common_tabhost" />

</LinearLayout>