<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    		  android:layout_width="wrap_content" android:layout_height="wrap_content"
    		  android:orientation="vertical" android:background="@drawable/dialog_bg">
    <TextView  android:layout_width="wrap_content" android:layout_height="wrap_content"
               android:layout_gravity="center"	android:text="@string/mesupdate"
               android:paddingTop="15px"  android:paddingBottom="20px"
               android:textSize="18dip"/>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
                  android:orientation="horizontal" android:gravity="center">      
        <ProgressBar  android:layout_width="200px" android:layout_height="35px" style="?android:attr/progressBarStyleHorizontal" 
            		   android:id="@+id/progressBar"/>
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
                  android:orientation="horizontal" android:gravity="center"
                   android:paddingTop="20px"  >
      	<Button  android:layout_width="wrap_content" android:layout_height="wrap_content"
                 android:text="@string/abolish" android:id="@+id/btnCancel"/>
    	<Button  android:layout_width="wrap_content" android:layout_height="wrap_content"
    	         android:layout_marginLeft="15dp"
                 android:text="@string/update" android:id="@+id/btnUpdate"/>
    </LinearLayout>
     
</LinearLayout>